load("//prow:def.bzl", "prow_push")

package(default_visibility = ["//visibility:public"])

# Build and push Deck
prow_push(
    name = "push-deck",
    bundle_name = "deck",
    images = {
        "eu.gcr.io/windy-oxide-102215/deck:{DOCKER_TAG}": "//prow/cmd/deck:image",
    },
)

# Build and push Hook
prow_push(
    name = "push-hook",
    bundle_name = "hook",
    images = {
        "eu.gcr.io/windy-oxide-102215/hook:{DOCKER_TAG}": "//prow/cmd/hook:image",
    },
)

# Build and push Tide
prow_push(
    name = "push-tide",
    bundle_name = "tide",
    images = {
        "eu.gcr.io/windy-oxide-102215/tide:{DOCKER_TAG}": "//prow/cmd/tide:image",
    },
)

# Build and push ghproxy
prow_push(
    name = "push-ghproxy",
    bundle_name = "ghproxy",
    images = {
        "eu.gcr.io/windy-oxide-102215/ghproxy:{DOCKER_TAG}": "//ghproxy:image",
    },
)

# Build and push label-sync
prow_push(
    name = "push-label-sync",
    bundle_name = "label-sync",
    images = {
        "eu.gcr.io/windy-oxide-102215/label-sync:{DOCKER_TAG}": "//label_sync:image",
    },
)

# Build and push needs-rebase
prow_push(
    name = "push-needs-rebase",
    bundle_name = "needs-rebase",
    images = {
        "eu.gcr.io/windy-oxide-102215/needs-rebase:{DOCKER_TAG}": "//prow/external-plugins/needs-rebase:image",
    },
)

filegroup(
    name = "improbable-push",
    srcs = [
         ":push-deck",
         ":push-hook",
         ":push-tide",
         ":push-ghproxy",
         ":push-label-sync",
         ":push-needs-rebase",
    ],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "improbable-build",
    srcs = [
        ":deck",
        ":ghproxy",
        ":hook",
        ":label-sync",
        ":needs-rebase",
        ":tide"
    ],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
