# gazelle:proto default

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//proto/cla:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
