package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_image(
    name = "image",
    base = "@git-base//image",
    binary = ":hatch",
)

go_binary(
    name = "hatch",
    data = [
        "//prow:configs",
    ],
    embed = [":go_default_library"],
    pure = "on",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/test-infra/prow/cmd/hatch",
    deps = [
        "//prow/config:go_default_library",
        "//prow/hatch:go_default_library",
        "//prow/logrusutil:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/google.golang.org/api/option:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
)
