load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "imp-cla.go",
        "spatial-api.go",
    ],
    importpath = "k8s.io/test-infra/prow/plugins/imp-cla",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/cla:go_default_library",
        "//prow/github:go_default_library",
        "//prow/pluginhelp:go_default_library",
        "//prow/plugins:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "//vendor/google.golang.org/grpc/credentials/oauth:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
